Add comprehensive in-app navigation with Mapbox
- Implemented full navigation system with Mapbox Directions API
- Added turn-by-turn navigation with voice guidance
- Created navigation UI with distance, time, and step-by-step instructions
- Added voice navigation toggle with German speech synthesis
- Integrated navigation start/stop functionality
- Removed destination marker window from map
- Enhanced user experience with professional navigation features

--- a/env.example
+++ b/env.example
@@ -1,3 +1,8 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Mapbox Configuration
+NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=your_mapbox_access_token
+NEXT_PUBLIC_MAPBOX_LIGHT_STYLE=mapbox://styles/your-username/your-light-style-id
+NEXT_PUBLIC_MAPBOX_DARK_STYLE=mapbox://styles/your-username/your-dark-style-id
