--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@maptiler/leaflet-maptilersdk": "^4.1.1",
     "@supabase/supabase-js": "^2.57.4",
     "@types/mapbox-gl": "^3.4.1",
+    "@zxing/library": "^0.21.3",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.16.0",
     "next": "15.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
