--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@maptiler/leaflet-maptilersdk": "^4.1.1",
     "@supabase/supabase-js": "^2.57.4",
     "@types/mapbox-gl": "^3.4.1",
-    "html5-qrcode": "^2.3.8",
+    "@zxing/library": "^0.21.3",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.16.0",
     "next": "15.5.3",
