--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@zxing/library": "^0.21.3",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.16.0",
-    "next": "15.5.3",
+    "next": "^16.1.6",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -28,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
